plugins {
    id 'com.android.library'
    id 'kotlin-android'
}

android {
    compileSdk rootProject.ext.compileSdkVersion

    defaultConfig {
        minSdkVersion rootProject.ext.minSdkVersion
        targetSdkVersion rootProject.ext.targetSdkVersion

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles 'consumer-rules.pro'
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    kotlinOptions {
        jvmTarget = '1.8'
    }
    namespace 'com.qw.framework.core'
}

dependencies {
    api "androidx.appcompat:appcompat:$versions.appcompat"
    api "com.google.android.material:material:$versions.material"
    api 'com.github.qinweiforandroid:QTab:1.0.0104'

    //核心组件（必须）
    api 'com.github.qinweiforandroid.SmartRefreshRecyclerView:recyclerview-core:4.0.11203'
    //使用swiperefreshlayout库实现的下拉刷新（推荐）
    api 'com.github.qinweiforandroid.SmartRefreshRecyclerView:recyclerview-swiperefresh:4.0.11203'
    //用到加载更多需要引入
    api 'com.github.qinweiforandroid.SmartRefreshRecyclerView:recyclerview-footer:4.0.11203'

    //test
    testImplementation "junit:junit:$versions.junit"
    androidTestImplementation "androidx.test.ext:junit:$versions.androidx_junit"
    androidTestImplementation "androidx.test.espresso:espresso-core:$versions.espresso_core"
}
apply from: '../nexus.gradle'